fix: 新版本bug修复

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -152,8 +152,8 @@
         "login": "Login",
         "findPhone": "Find the phone",
          "findEmail": "Find Email",
-         "loginEmail": "Mobile login",
-         "loginPhone": "Mailbox Login",
+         "loginEmail": "Mailbox Login",
+         "loginPhone": "Mobile login",
          "registerPhone": "Phone Registration",
          "registerEmail": "Email Registration",
         "findAccountTitle": "Recover account",
@@ -463,6 +463,8 @@
         "teamDetail": "Team Detail",
         "commDetail": "Commission Details",
         "commRuleInstru": "Commission Rules Description",
+        "upLevel": "Superior",
+        "downLevel": "Subordinate",
         "commTypeTeam": "Team Rebate",
         "commTypeFirst": "First level rebate",
         "commTypeSecond": "Secondary rebate",
