--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -157,8 +157,8 @@
         "findAccountTitle": "找回账号",
         "findPhone": "手机找回",
         "findEmail": "邮箱找回",
-        "loginEmail": "手机登录",
-        "loginPhone": "邮箱登录",
+        "loginEmail": "邮箱登录",
+        "loginPhone": "手机登录",
         "registerPhone": "手机注册",
         "registerEmail": "邮箱注册",
         "findAccountTip": "找回账号登录密码",
@@ -466,6 +466,8 @@
         "commTypeTeam": "团队返佣",
         "commTypeFirst": "一级返佣",
         "commTypeSecond": "二级返佣",
+        "upLevel": "上级",
+        "downLevel": "下级",
         "commTypeThress": "三级返佣",
         "tip1": "凡邀请好友完成下载并注册后，好友在平台交易过程 中产生的每笔真实交易手续费，将获得相应比例的手续 费返佣。",
         "tip2": "返佣的形式将按照用户实际交易币种所产生的对应手续费返佣到您的交易账户。",
