--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -156,8 +156,8 @@
         "findAccountTitle": "找回賬號",
         "findPhone": "手機找回",
         "findEmail": "郵箱找回",
-        "loginEmail": "手機登錄",
-        "loginPhone": "郵箱登錄",
+        "loginEmail": "邮箱登录",
+        "loginPhone": "手機登錄",
         "registerPhone": "手機註冊",
         "registerEmail": "郵箱註冊",
         "findAccountTip": "找回賬號登錄密碼",
@@ -462,6 +462,8 @@
         "commTypeTeam": "團隊返佣",
         "commTypeFirst": "一級返佣",
         "commTypeSecond": "二級返佣",
+        "upLevel": "上級",
+        "downLevel": "下級",
         "commTypeThress": "三級返佣",
         "tip1": "凡邀請好友完成下載並註冊後，好友在平台交易過程 中產生的每筆真實交易手續費，將獲得相應比例的手續 費返佣。",
         "tip2": "返佣的形式將按照用戶實際交易幣種所產生的對應手續費返佣到您的交易賬戶。",
