--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -111,7 +111,7 @@
         "isdev": "The function is under development, so stay tuned",
         "payment": "payment",
         "tranfer": "Transfer",
-        "financial": "Financial Management",
+        "financial": "Financing",
         "news": "News",
         "invita": "Invite",
         "cost": "Life payment",
