feat: 英文版帮助中心

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -261,6 +261,12 @@
         "loginTutorial": "Register and Login Tutorial",
         "howToRegister": "How to log in and register",
         "howToRecharge": "How to recharge/withdraw cash",
+        "howToOtcS": "OTC for sale",
+        "howToOtcB": "OTC purchase",
+        "howToOtcBuss": "OTC Merchant",
+        "otcSell": "Off-site sale process",
+        "otcBuy": "Off-site purchase process",
+        "otcBussiness": "How to become an off-site merchant",
         "transferAssets": "Asset transfer in and out",
         "otc": "OTC over-the-counter trading",
         "otcTrading": "Over-the-counter trading process",
