--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -251,6 +251,12 @@
         "loginTutorial": "注册登录教程",
         "howToRegister": "如何登录注册",
         "howToRecharge": "如何充值/提现",
+        "howToOtcS": "OTC出售",
+        "howToOtcB": "OTC购买",
+        "howToOtcBuss": "OTC商家",
+        "otcSell": "场外出售流程",
+        "otcBuy": "场外购买流程",
+        "otcBussiness": "如何成为场外商家",
         "transferAssets": "资产转入转出",
         "otc": "OTC场外交易",
         "otcTrading": "场外交易流程",
