--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -250,6 +250,12 @@
         "loginTutorial": "註冊登錄教程",
         "howToRegister": "如何登錄註冊",
         "howToRecharge": "如何充值/提現",
+        "howToOtcS": "OTC出售",
+        "howToOtcB": "OTC購買",
+        "howToOtcBuss": "OTC商家",
+        "otcSell": "場外出售流程",
+        "otcBuy": "場外購買流程",
+        "otcBussiness": "如何成為場外商家",
         "transferAssets": "資產轉入轉出",
         "otc": "OTC場外交易",
         "otcTrading": "場外交易流程",
