fix: 更新弹窗显示

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -5,6 +5,7 @@
         "mine": "Mine"
     },
     "common": {
+        "updateInfo": "Update Content",
         "send": "Send",
         "send2": "Send",
         "save": "Save",
