--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -5,6 +5,7 @@
         "mine": "我的"
     },
     "common": {
+        "updateInfo": "更新內容",
         "send": "發 送",
         "send2": "發送",
         "release": "發 布",
