--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -5,6 +5,7 @@
         "mine": "我的"
     },
     "common": {
+        "updateInfo": "更新内容",
         "send": "发 送",
         "send2": "发送",
         "release": "发 布",
