--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -17,7 +17,7 @@
         "fee": "手续费",
         "clickToLogin": "点击登录",
         "placeFee": "下单手续费",
-        "placeolderFee": "注：请注意账户余额够扣除发布手续费",
+        "placeolderFee": "注：请注意交易后会扣除手续费数量",
         "article": "文章",
         "notice": "公告",
         "noNotice": "暂无公告",
