--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -17,7 +17,7 @@
         "fee": "手续费",
         "clickToLogin": "點擊登錄",
         "placeFee": "下單手續費",
-        "placeolderFee": "注：請注意賬戶餘額夠扣除發布手續費",
+        "placeolderFee": "注：請注意發佈後會扣除手續費數量",
         "article": "文章",
         "notice": "公告",
         "noNotice": "暫無公告",
