--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -217,6 +217,7 @@
         "resetReal": "Recertification",
         "systemSetting": "System settings",
         "hideAmount": "Hide balance",
+        "availableAmount": "available",
         "payManaged": "Collection management",
         "changeLang": "Switch language",
         "unitPrice": "Sales unit",
@@ -230,10 +231,10 @@
         "realName3": "Hold the front of the document",
         "realName4": "Upload certified video",
         "realName5": "Uploading",
-        "safePass": "Change security password",
+        "safePass": "Change Pay password",
         "setSafePass": "Set a secure password",
-        "confirmSafePass": "Confirm security password",
-        "forgetSafePass": "Forgot security password",
+        "confirmSafePass": "Confirm Pay password",
+        "forgetSafePass": "Forgot Pay password",
         "changePwd": "Modify login password",
         "changePwdTip": "Modify login password",
         "verLv1Tip": "Please fill in your ID card information.",
@@ -275,7 +276,7 @@
         "otc": "OTC over-the-counter trading",
         "otcTrading": "Over-the-counter trading process",
         "help": "Help Tutorials",
-        "set": "Has been set",
+        "set": "Set",
         "notSet": "Not set",
         "auditSuccess": "Successful review",
         "auditTip1": "Real-name authentication (LV1) is successful, click \"Next\" to apply for real-name authentication (LV2)",
