--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -267,6 +267,7 @@
         "resetReal": "重新認證",
         "systemSetting": "系統設置",
         "hideAmount": "隱藏餘額",
+        "availableAmount": "可用餘額",
         "payManaged": "收款管理",
         "changeLang": "切換語言",
         "unitPrice": "計價單位",
