feat: 转入转出优化

--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -203,9 +203,11 @@
         "paymentTip1": "最小转入金额：0.001{symbol}，小于最小金额的充值将不会上账",
         "paymentTip2": "请勿向上述地址充值任何非{symbol}资产否则资产将不可找回。",
         "paymentTip3": "充值至上述地址后，需要1个网络节点的确认才能到账。",
-        "paymentTip4": "24小时内最高可转{txt}",
+        "paymentTip4": "24小时内最高可转{txt}, 您24小时已转出{amount}",
         "paymentTip5": "为保障资金安全，当您账户安全策略变更、密码修改、我们会对提币进行人工审核，请耐心等待工作人员电话或邮件联系。",
-        "paymentTip6": "请务必确认电脑及浏览器安全，防止信息被篡改或泄露。"
+        "paymentTip6": "请务必确认电脑及浏览器安全，防止信息被篡改或泄露。",
+        "paymentTip7": "您当前实名认证等级不够 \n 请先完成高级实名",
+        "paymentTip8": "请先进行实名认证"
     },
     "mine": {
         "changeNickname": "修改昵称",
