--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -203,9 +203,11 @@
         "paymentTip2": "Please do not deposit any assets other than {symbol} to the above address, otherwise the assets will not be retrieved.",
         "paymentTip3": "After recharging to the above address, the confirmation of 1 network node is required to be credited.",
         "serviceCharge": "Handling fee",
-        "paymentTip4": "Up to {txt} can be transferred within 24 hours",
+        "paymentTip4": "Up to {txt} can be transferred within 24 hours, You have been transferred out {amount} in 24 hours",
         "paymentTip5": "In order to ensure the safety of funds, when your account security policy changes, password changes, we will manually review the withdrawal, please wait patiently for the staff to contact you by phone or email.",
-        "paymentTip6": "Please make sure that the computer and browser are safe to prevent information from being tampered with or leaked."
+        "paymentTip6": "Please make sure that the computer and browser are safe to prevent information from being tampered with or leaked.",
+        "paymentTip7": "Your current real-name authentication level is not enough\n Please complete advanced real-name first",
+        "paymentTip8": "Please perform real-name authentication first"
     },
     "mine": {
         "changeNickname": "Change Nickname",
