--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -202,9 +202,11 @@
         "paymentTip1": "最小轉入金額：0.001{symbol}，小於最小金額的充值將不會上賬",
         "paymentTip2": "請勿向上述地址充值任何非{symbol}資產否則資產將不可找回。",
         "paymentTip3": "充值至上述地址後，需要1個網絡節點的確認才能到賬。",
-        "paymentTip4": "24小時內最高可轉{txt}",
+        "paymentTip4": "24小時內最高可轉{txt}, 您24小時已轉出{amount}",
         "paymentTip5": "為保障資金安全，當您賬戶安全策略變更、密碼修改、我們會對提幣進行人工審核，請耐心等待工作人員電話或郵件聯繫。",
-        "paymentTip6": "請務必確認電腦及瀏覽器安全，防止信息被篡改或洩露。"
+        "paymentTip6": "請務必確認電腦及瀏覽器安全，防止信息被篡改或洩露。",
+        "paymentTip7": "您當前實名認證等級不夠 \n 請先完成高級實名",
+        "paymentTip8": "請先進行實名認證"
     },
     "mine": {
         "changeNickname": "修改暱稱",
