--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -358,9 +358,9 @@
         "mode": "Mode",
         "shelfAdv": "Confirm to remove ads from shelves",
         "vfytime": "Business certification time",
-        "cumulative": "cumulative advertising",
-        "tradeOrderNum": "Trade Order Volume",
-        "tradeOrderRate": "Transaction Rate",
+        "cumulative": "Cumulative",
+        "tradeOrderNum": "Volume",
+        "tradeOrderRate": "Turnover rate",
         "contactAppealing": "This order is under appeal. If you have any questions, please contact customer service",
         "payInfoFailed": "Failed to obtain payment information, please try again later",
         "orderInfoFailed": "Failed to obtain order details",
