--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -358,8 +358,8 @@
         "mode": "方式",
         "shelfAdv": "确认下架广告",
         "vfytime": "商家认证时间",
-        "cumulative": "累计发布广告",
-        "tradeOrderNum": "成交单量",
+        "cumulative": "累计发布量",
+        "tradeOrderNum": "成交量",
         "tradeOrderRate": "成交率",
         "contactAppealing": "此订单在申诉中， 如有疑问请联系客服",
         "payInfoFailed": "获取支付信息失败，请稍后重试",
