--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -352,6 +352,9 @@
         "markPaid": "標記已支付",
         "mode": "方式",
         "shelfAdv": "確認下架廣告",
+        "cumulative": "累計發佈量",
+        "tradeOrderNum": "成交量",
+        "tradeOrderRate": "成交率",
         "contactAppealing": "此訂單在申訴中， 如有疑問請聯繫客服",
         "payInfoFailed": "獲取支付信息失敗，請稍後重試",
         "orderInfoFailed": "獲取訂單詳情失敗",
