feat: telegrame发送验证码

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -32,6 +32,7 @@
         "enterPayCode": "Please enter a secure password",
         "enterPwdCode": "Please enter your password",
         "enterGoogleCode": "Please enter google password",
+        "enterTelegramCode": "Please input the Telegram verification code",
         "name": "Name",
         "noMore": "No more",
         "noData": "No data",
