--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -338,6 +338,7 @@
         "orderType": "订单类型",
         "unitPrice": "单价",
         "num": "数量",
+        "amount": "金额",
         "remark": "备注",
         "maxTrade": "最大交易",
         "minAmount": "单笔最低",
@@ -414,7 +415,10 @@
         "icePhone": "紧急联系人电话",
         "deposit": "缴纳保证金",
         "floatingPrice": "浮动价格",
-        "fixedPrice": "固定价格"
+        "fixedPrice": "固定价格",
+
+        "methodType": "按{type}购买",
+        "placeInput": "请输入{type}"
     },
     "business": {
         "vfiBusTip1": "为保障资金安全，当您账户安全策略变更、密码修改、我们会对提币进行人工审核，请耐心等待工作人员电话或邮件联系。",
