--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -418,6 +418,11 @@
         "fixedPrice": "固定价格",
 
         "methodType": "按{type}购买",
+        "bestPrice": "盘口最优价",
+        "balance": "余额",
+        "quickTip": "极速一键下单，按需匹配用户挂单最优盘口价",
+        "quick": "一键",
+        "noOrder": "暂无匹配订单",
         "placeInput": "请输入{type}"
     },
     "business": {
