--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -71,6 +71,8 @@
         "sideSell": "Sell",
         "sideBuyT": "Buy",
         "sideSellT": "Sell",
+        "typeBuyT": "Buy",
+        "typeSellT": "Sell",
         "payway": "Payment method",
         "alipay": "Alipay",
         "weixin": "WeChat",
@@ -221,7 +223,7 @@
         "systemSetting": "System settings",
         "hideAmount": "Hide balance",
         "availableAmount": "available",
-        "payManaged": "Collection management",
+        "payManaged": "Collection and payment",
         "changeLang": "Switch language",
         "unitPrice": "Sales unit",
         "logout": "Log out",
