--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -114,6 +114,8 @@
         "sideSell": "卖出",
         "sideBuyT": "购买",
         "sideSellT": "出售",
+        "typeBuyT": "我要买",
+        "typeSellT": "我要卖",
         "payway": "支付方式",
         "alipay": "支付宝",
         "weixin": "微信",
@@ -273,7 +275,7 @@
         "systemSetting": "系统设置",
         "hideAmount": "隐藏余额",
         "availableAmount": "可用余额",
-        "payManaged": "收款管理",
+        "payManaged": "收付款管理",
         "changeLang": "切换语言",
         "unitPrice": "计价单位",
         "logout": "退出账号",
