--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -112,6 +112,8 @@
         "sideSell": "賣出",
         "sideBuyT": "購買",
         "sideSellT": "出售",
+        "typeBuyT": "我要買",
+        "typeSellT": "我要賣",
         "payway": "支付方式",
         "alipay": "支付寶",
         "weixin": "微信",
@@ -271,7 +273,7 @@
         "systemSetting": "系統設置",
         "hideAmount": "隱藏餘額",
         "availableAmount": "可用餘額",
-        "payManaged": "收款管理",
+        "payManaged": "收付款管理",
         "changeLang": "切換語言",
         "unitPrice": "計價單位",
         "logout": "退出賬號",
