feat: 添加支付方式

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -76,6 +76,8 @@
         "payway": "Payment method",
         "alipay": "Alipay",
         "weixin": "WeChat",
+        "otherBank": "OtherBank",
+        "cash": "Cash",
         "selectPayType": "Select Payment Method",
         "bank": "ABA",
         "huione": "Huiwang",
