--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -246,6 +246,7 @@
         "verLv2Tip": "Please upload the front and back of my ID card and the photo of me holding ID card.",
         "verLv3Tip1": "I am ***, and the ID number is: 545645645645. I voluntarily register the transaction with bagpay and make sure that the account is for my own use.",
         "verLv3Tip2": "I ensure that all sources of funds are legal, I have understood and can bear all transaction risks, and I will not use this platform for illegal use of digital assets, and will not use this platform for any illegal activities, such as money laundering, pyramid schemes, and illegal foreign currency exchange.",
+        "verLv3Popit": "1-3 working days audit (only support MP4, MOV, AVI suffix video file, size no more than 20m).",
         "collectionSet": "Collection settings",
         "opinionQuest": "Opinion question",
         "opinion": "Opinion",
