feat: 多种支付方式加申诉

--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -409,7 +409,7 @@
         "protocol": "广告发布方协议",
         "manage": "广告管理",
         "order": "场外订单",
-        "payment": "收付款方式",
+        "payment": "收款方式",
         "business": "广告商家",
         "vfyBus": "认证商家",
         "vfyBused": "已认证商家",
