--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -399,7 +399,7 @@
         "protocol": "廣告發布方協議",
         "manage": "廣告管理",
         "order": "場外訂單",
-        "payment": "收付款方式",
+        "payment": "收款方式",
         "business": "廣告商家",
         "vfyBus": "認證商家",
         "vfyBused": "已認證商家",
