feat： telegram 登录

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -6,6 +6,7 @@
     },
     "common": {
         "updateInfo": "Update Content",
+        "thirdLogin": "Third party quick login",
         "send": "Send",
         "send2": "Send",
         "save": "Save",
