--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -6,6 +6,7 @@
     },
     "common": {
         "updateInfo": "更新內容",
+        "thirdLogin": "協力廠商快捷登入",
         "send": "發 送",
         "send2": "發送",
         "release": "發 布",
