--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -32,6 +32,8 @@
         "share": "分享",
         "save": "保 存",
         "scan": "扫一扫",
+        "scanTip1": "扫描对方收款二维码",
+        "scanTip2": "进行付款/转账",
         "imgTooBig": "图片太大",
         "fileBigTip": "文件过大，请重新选择",
         "uploadFailed": "文件上传失败",
@@ -213,6 +215,7 @@
         "paymentTip2": "请勿向上述地址充值任何非{symbol}资产否则资产将不可找回。",
         "paymentTip3": "充值至上述地址后，需要1个网络节点的确认才能到账。",
         "paymentTip10": "内部转账手续费: {amount}",
+        "paymentTip11": "链上转账手续费: {amount}",
         "paymentTip4": "24小时内最高可转{txt}, 您24小时已转出{amount}",
         "paymentTip5": "为保障资金安全，当您账户安全策略变更、密码修改、我们会对提币进行人工审核，请耐心等待工作人员电话或邮件联系。",
         "paymentTip6": "请务必确认电脑及浏览器安全，防止信息被篡改或泄露。",
@@ -378,8 +381,8 @@
         "shelfAdv": "确认下架广告",
         "vfytime": "商家认证时间",
         "cumulative": "累计发布量",
-        "tradeOrderNum": "成交量",
-        "tradeOrderRate": "成交率",
+        "tradeOrderNum": "完成订单数",
+        "tradeOrderRate": "订单完成率",
         "contactAppealing": "此订单在申诉中， 如有疑问请联系客服",
         "payInfoFailed": "获取支付信息失败，请稍后重试",
         "orderInfoFailed": "获取订单详情失败",
