--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -31,6 +31,8 @@
         "share": "分享",
         "save": "保 存",
         "scan": "掃一掃",
+        "scanTip1": "掃描對方收款二維碼",
+        "scanTip2": "進行付款/轉帳",
         "imgTooBig": "圖片太大",
         "fileBigTip": "文件過大，請重新選擇",
         "uploadFailed": "文件上傳失敗",
@@ -369,8 +371,8 @@
         "mode": "方式",
         "shelfAdv": "確認下架廣告",
         "cumulative": "累計發佈量",
-        "tradeOrderNum": "成交量",
-        "tradeOrderRate": "成交率",
+        "tradeOrderNum": "完成訂單數",
+        "tradeOrderRate": "訂單完成率",
         "contactAppealing": "此訂單在申訴中， 如有疑問請聯繫客服",
         "payInfoFailed": "獲取支付信息失敗，請稍後重試",
         "orderInfoFailed": "獲取訂單詳情失敗",
