--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -497,6 +497,7 @@
         "levels": "Levels",
         "level": "level",
         "2level": "2level",
+        "3level": "3level",
         "link": "Invitation Link",
         "poster": "Invitation Poster",
         "team": "Team",
