--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -500,6 +500,7 @@
         "levels": "等级",
         "level": "级",
         "2level": "2级",
+        "3level": "3级",
         "link": "邀请链接",
         "poster": "邀请海报",
         "team": "团队",
