--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -495,6 +495,7 @@
         "levels": "等級",
         "level": "級",
         "2level": "2級",
+        "3level": "3級",
         "link": "邀請鏈接",
         "poster": "邀請海報",
         "team": "團隊",
