feat: 一键购买优化

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -334,7 +334,7 @@
         "Address": "transaction address"
     },
     "otc": {
-        "otcAdv": "Post an ad",
+        "otcAdv": "Place order",
         "otcAdvFee": "Advertising fee",
         "totalTurnover": "Total Turnover",
         "total": "Total",
