feat： topbar 布局优化

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -576,6 +576,7 @@
 
         "ERR_BAD_COIN_SYMBOL": "Incorrect currency identification",
         "ERR_BAK_TOKEN": "ERROR: Login information expired",
+        "ERR_NICKNAME_ALREADY_EXIST": "Nickname already exists, please try again",
 
         "phoneErr": "Please enter a valid phone number",
         "pwdErr": "Please enter a password of 6~16 letters or numbers",
