--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -574,6 +574,7 @@
 
         "ERR_BAD_COIN_SYMBOL": "幣種標識不正確",
         "ERR_BAK_TOKEN": "登入資訊已過期",
+        "ERR_NICKNAME_ALREADY_EXIST": "昵稱已存在，請重試",
 
         "phoneErr": "請輸入正確的手機號",
         "pwdErr": "請輸入大於6位小於16位字母或數字的密碼",
