feat: 头部导航优化

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -235,6 +235,9 @@
         "payManaged": "Collection and payment",
         "changeLang": "Switch language",
         "unitPrice": "Sales unit",
+        "navLayout": "Navigation layout",
+        "navLayoutForTop": "Top",
+        "navLayoutForBottom": "Bottom",
         "logout": "Log out",
         "logoutTip": "Confirm logout",
         "payPwd": "Please go to set a security password first",
