--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -289,6 +289,9 @@
         "payManaged": "收付款管理",
         "changeLang": "切换语言",
         "unitPrice": "计价单位",
+        "navLayout": "导航布局",
+        "navLayoutForTop": "顶部导航",
+        "navLayoutForBottom": "底部导航",
         "logout": "退出账号",
         "logoutTip": "确认退出登录",
         "payPwd": "请先去设置安全密码",
