--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -285,6 +285,9 @@
         "payManaged": "收付款管理",
         "changeLang": "切換語言",
         "unitPrice": "計價單位",
+        "navLayout": "導航佈局",
+        "navLayoutForTop": "頂部導航",
+        "navLayoutForBottom": "底部導航",
         "logout": "退出賬號",
         "logoutTip": "確認退出登錄",
         "payPwd": "請先去設置安全密碼",
