--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -39,13 +39,13 @@
         "enterTelegramCode": "Please input the Telegram verification code",
         "name": "Name",
         "noMore": "No more",
-        "noData": "No data",
+        "noData": "No Data",
         "webErQua": "Internet problem",
         "screen": "Filter",
         "poptip": "Tips",
         "waitSend": "Waiting to send",
         "waitReview": "Moderated",
-        "waitComfirm": "Waiting for confirmation",
+        "waitComfirm": "Received",
         "sending": "Sending",
         "sented": "Has been sent",
         "canceled": "Cancelled",
@@ -108,6 +108,7 @@
         "price": "Price",
         "premium": "Premium Rate",
         "fee": "Handling Fee",
+        "minerFee": "Miner Fee",
         "clickToLogin": "Click to log in",
         "placeFee": "Order Handling Fee",
         "placeolderFee": "Note: Please note that the service charge will be deducted after the release",
@@ -472,7 +473,7 @@
         "checkAgree": "Please check the advertisement publisher agreement"
     },
     "payment": {
-        "paymentTitle": "Receive payment",
+        "paymentTitle": "Receive",
         "address": "Address",
         "amount": "Amount",
         "paymentAddr": "Wallet address",
@@ -480,10 +481,12 @@
         "choiceAddress": "Choose currency",
         "changeCoin": "Switch currency",
         "remark": "Remarks",
-        "transferIn": "Transfer in",
-        "transferOut": "TransferOut",
-        "paymentTip": "Scan the QR code and transfer to",
+        "transferIn": "In",
+        "transferOut": "Out",
+        "receive": "Receive",
+        "send": "Send",
         "chequesAddr": "Receiving address",
+        "toAdd": "To",
         "memoAddr": "Additional address",
         "addrDetail": "Address details",
         "setPaymentTitle": "Manage wallet",
