--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -5,6 +5,8 @@
         "mine": "我的"
     },
     "common": {
+        "envelopeSender": "{sender}的红包",
+        "envelopeShares": "已领取{took_shares}/{shares}个",
         "updateInfo": "更新内容",
         "thirdLogin": "第三方快捷登录",
         "logging": "登录中",
