feat:  红包列表页

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -5,6 +5,9 @@
         "mine": "Mine"
     },
     "common": {
+        "envelopeSender": "Red envelope of {sender}",
+        "envelopeShares": "Received {took_shares} / {shares}",
+        "redenvelopefail": "Failed to get red packet information",
         "updateInfo": "Update Content",
         "thirdLogin": "Third party quick login",
         "send": "Send",
