--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -20,6 +20,7 @@
         "price": "价格",
         "premium": "溢价率",
         "fee": "手续费",
+        "minerFee": "矿工费",
         "clickToLogin": "点击登录",
         "placeFee": "下单手续费",
         "placeolderFee": "注：请注意交易后会扣除手续费数量",
@@ -489,6 +490,9 @@
         "defaultRemark": "商家很懒，什么都没写",
         "remarkTip": "备注信息（非必填）",
         "transferIn": "转入",
+        "receive": "转入",
+        "send": "转出",
+        "toAdd": "地址",
         "transferOut": "转出",
         "paymentTip": "扫描二维码，转入",
         "chequesAddr": "收付款地址",
