--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -19,6 +19,7 @@
         "price": "價格",
         "premium": "溢價率",
         "fee": "手续费",
+        "minerFee": "矿工费",
         "clickToLogin": "點擊登錄",
         "placeFee": "下單手續費",
         "placeolderFee": "注：請注意發佈後會扣除手續費數量",
@@ -476,6 +477,9 @@
         "paymentTitle": "收付款",
         "address": "地址",
         "amount": "金額",
+        "receive": "轉入",
+        "send": "轉出",
+        "toAdd": "地址",
         "paymentAddr": "錢包地址",
         "addAddress": "添加地址",
         "choiceAddress": "選擇幣種",
